fix: vertical align label line height

--- a/src/form/form-item/form-item.component.scss
+++ b/src/form/form-item/form-item.component.scss
@@ -30,6 +30,10 @@ $form-item-width: (
         display: none;
       }
     }
+
+    .aui-form-item__label {
+      line-height: use-var(line-height-m);
+    }
   }
 
   &__label-wrapper {
